Bug 343130 - Time format should be adjusted on the fly
Summary: Time format should be adjusted on the fly
Status: RESOLVED FIXED
Alias: None
Product: kronometer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-01-21 18:22 UTC by Elvis Angelaccio
Modified: 2015-08-28 23:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.0.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elvis Angelaccio 2015-01-21 18:22:08 UTC
Kronometer does not adjust the stopwatch time format on the fly.

Reproducible: Always

Steps to Reproduce:
1. Open the settings dialog and set the stopwatch time format to hide hours and minutes.
2. Start the stopwatch
3. Let it run at least one minute

Actual Results:  
After the second 59, the seconds digits are resetted to zero. The user can only guess that a minute has passed.

Expected Results:  
Kronometer should adjust (i.e override) the stopwatch time format and display also the minutes digits.
Comment 1 Elvis Angelaccio 2015-07-21 12:21:40 UTC
Git commit 53d568b25ed8f4501535ea12e1fa5eee47714ddc by Elvis Angelaccio.
Committed on 21/07/2015 at 12:02.
Pushed by elvisangelaccio into branch 'frameworks'.

Implement adjustable time format

Override the time format when needed. Only minute and hours can be overriden,
since it's no more possible to display second fractions without seconds.
FIXED-IN: 2.0.0

M  +6    -9    autotests/testtimeformat.cpp
M  +3    -0    src/mainwindow.cpp
M  +65   -40   src/timedisplay.cpp
M  +14   -2    src/timedisplay.h
M  +31   -10   src/timeformat.cpp
M  +16   -16   src/timeformat.h

http://commits.kde.org/kronometer/53d568b25ed8f4501535ea12e1fa5eee47714ddc