Implement adjustable time format

Override the time format when needed. Only minute and hours can be overriden,
since it's no more possible to display second fractions without seconds.

BUG: 343130
FIXED-IN: 2.0.0